# lamp-drpc

./: Cargo.toml  README.md
src/: error_log.rs  main.rs  metadata.rs  player.rs
