[package]
name = "lamp-drpc"
version = "0.1.0"
edition = "2021"

[dependencies]
audiotags = "0.5.0"
catbox = "0.8.2"
chrono = "0.4.40"
claxon = "0.4.3"
crc = "3.2.1"
discord-presence = { version = "1.5.0", features = ["activity_type"] }
fast_image_resize = { version = "5.1.2", features = ["image"] }
http = "0.2.12"
id3 = "1.16.2"
image = "0.25.5"
imgurs = "0.11.2"
reqwest = "0.12.15"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
sysinfo = "0.33.1"
toml = "0.8.20"
trpl = "0.2.0"
